Make text styling run over between parts correctly (start-end styles)